--- a/frontend/app/templates/apartments/show.hbs
+++ b/frontend/app/templates/apartments/show.hbs
@@ -4,3 +4,6 @@
   <li>Listing: {{model.listingUrl}}</li>
   <li>Available? {{model.available}}</li>
 </ul>
+
+{{link-to 'Edit' 'apartments.edit' model}}
+{{link-to 'Back' 'apartments'}}
