fix check box for availability

--- a/frontend/app/templates/apartments/-form.hbs
+++ b/frontend/app/templates/apartments/-form.hbs
@@ -42,7 +42,7 @@
   </p>
   <p>
     <label>Available:
-      {{input type="checkbox" name=available}}
+      {{input type="checkbox" checked=model.available}}
     </label>
   </p>
   <p>
