--- a/frontend/app/templates/apartments/show.hbs
+++ b/frontend/app/templates/apartments/show.hbs
@@ -5,7 +5,7 @@
   <li>City: {{model.city}}</li>
   <li>State: {{model.state}}</li>
   <li>Zip: {{model.zip}}</li>
-  <li>Photo: ${{model.photoUrl}}</li>
+  <li>Photo: {{model.photoUrl}}</li>
   <li>Listing: {{model.listingUrl}}</li>
   <li>Description: {{model.description}}</li>
 </ul>
