--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,1 +1,15 @@
+{{#md-navbar name='Apartment Listings' class='indigo'}}
+  <!-- A workaround to get the "active" class
+    to apply to the active <li> automatically -->
+    {{#link-to 'apartments' tagName='li'}}
+       {{link-to 'Apartments' 'apartments'}}
+     {{/link-to}}
+     {{#link-to 'apartments.new' tagName='li'}}
+       {{link-to 'New' 'apartments.new'}}
+     {{/link-to}}
+{{/md-navbar}}
+
 {{outlet}}
+
+{{!-- ember-cli-materialize modal container --}}
+{{md-modal-container}}
