--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -9,7 +9,9 @@
      {{/link-to}}
 {{/md-navbar}}
 
-{{outlet}}
+<div class="main-container">
+  {{outlet}}
+</div>
 
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
