index show styling

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,6 +1,8 @@
 @import 'materialize';
 @import 'ember-cli-materialize';
 
+$lightblue : '#039BE';
+
 .main-container {
   margin-left: 50px;
   margin-right: 50px;
