--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{#md-navbar name='Apartment Listings' class='indigo'}}
+{{#md-navbar name='Apartment Listings' class='teal darken-1'}}
   <!-- A workaround to get the "active" class
     to apply to the active <li> automatically -->
     {{#link-to 'apartments' tagName='li'}}
@@ -12,6 +12,3 @@
 <div class="main-container">
   {{outlet}}
 </div>
-
-{{!-- ember-cli-materialize modal container --}}
-{{md-modal-container}}
