stlying and add new model fix

--- a/frontend/app/templates/apartments/-form.hbs
+++ b/frontend/app/templates/apartments/-form.hbs
@@ -45,7 +45,7 @@
         {{md-input value=model.description}}
       </label>
     </p>
-    <input class='md-btn-submit' type="submit" value="Save"/>
+    <input type="submit" value="Save"/>
   </form>
   <button {{action "cancel" model on="click"}}>Cancel</button>
 </div>
