--- a/frontend/app/templates/apartments/-form.hbs
+++ b/frontend/app/templates/apartments/-form.hbs
@@ -47,5 +47,5 @@
     </p>
     <input type="submit" value="Save"/>
   </form>
-  <button {{action "cancel" model on="click"}}>Cancel</button>
+  <button {{action "cancel" on="click"}}>Cancel</button>
 </div>
